2004-05-13 Tushar T <tushar@linuxfromscratch.org>
	* The begining of blfs-bootscripts.
